# distmem-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  activate_dev_venv.sh  rust-toolchain.toml
.github/workflows/: ci.yml
src/: distmem.rs  lib.rs  nonempty_range.rs  transport.rs
src/interceptmem/: addr_space.rs  mem_ops.rs  mod.rs  page_addr.rs  range_ext.rs  userfaultfd_create.rs  userfaultfd_ext.rs
src/transport/: data.rs  mod.rs
tests/: distmem.rs
